06/17/2003 Bob Rossi <bob_rossi@cox.net>

	* Makefile.am: Added tokenizer directory to compile script
	* highlight.c: removed highligh_c and highlight_ada
	removed c_types, c_keywords, ada_types, ada_keywords
	Added new function highlight_node which interfaces with the new
	tokenizer library.
	* sources.c: Changed load_file, it calls the new highlight function.

06/14/2003 Mike Mueller <mmueller@cs.uri.edu>
    * highlight.c: Fixed bug in left/right scrolling when tab characters present

06/14/2003 Peter Kovacs <peter@kovax.org>

    * commands.c: Added support for parsing set foo=bar type variables.  Added
    support for parsing configuration files (somewhat incomplete at this
    point).
    * cgdb.c: Added support for parsing ~/.cgdb/cgdbrc configuration file.

06/14/2003 Bob Rossi <bob_rossi@cox.net>

	* commands.c: Implemented tab_stop feature. Changed tabspace to tabstop.
				  Changed parse error call from printf to if_print_message.
 	* highlight.c: changed to use tabstop variable.
	* interface.c: Added if_print_message.
	* interface.h: Added if_print_message.

06/12/2003 Bob Rossi <bob_rossi@cox.net>

	* commands.c: sorted VARIABLES structure

06/11/2003 Bob Rossi <bob_rossi@cox.net>

	* sources.h,added field covered_lines to list_node: This field is used
	to record all the line numbers ( per file ) that gdb has directed the 
	user to go to. This was inteded to work with actuall lines the user has
	covered. However, if the user does up/down, then those lines get added
	also.
	* sources.c: Changed some calls from malloc to xmalloc. 
	Added new option called line_coverage_option.
	* interface.c: added call to redisplay the screen when a command is
	recieved via the status bar.
	* commands.c: Added new command line_coverage_option.

06/04/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb.c: process_commands, changed interface between cgdb/tgdb.
    tgdb now sends atomic commands. self contained.

06/01/2003 Bob Rossi <bob_rossi@cox.net>
    